# piscine-rust

./: Cargo.toml
adding/: Cargo.toml
adding_twice/src/: lib.rs
arrange_it/src/: lib.rs
arrays/src/: lib.rs
banner/src/: lib.rs
bigger/src/: lib.rs
blood_types_s/src/: lib.rs  main.rs
border_cross/src/: lib.rs
borrow/src/: lib.rs
borrow_box/src/: lib.rs
borrow_me_the_reference/src/: lib.rs
box_it/src/: lib.rs  main.rs
box_recursion/src/: lib.rs  main.rs
boxing_todo/: Cargo.toml
boxing_todo/src/: err.rs  lib.rs
brain_fuck/src/: main.rs
capitalizing/src/: lib.rs
car_rental/src/: lib.rs  main.rs
card_deck/src/: lib.rs
changes/src/: lib.rs
check_user_name/src/: lib.rs
cipher/src/: lib.rs
circle/src/: lib.rs
closures/src/: lib.rs
collect/src/: lib.rs
copy/src/: lib.rs
count_factorial/: Cargo.toml
count_factorial/src/: lib.rs
counting_words/src/: lib.rs
delete_prefix/src/: lib.rs
diamond_creation/src/: lib.rs
display_table/src/: lib.rs  main.rs
division_and_remainder/src/: lib.rs
does_it_fit/src/: lib.rs  main.rs
doubtful/src/: lib.rs
dress_code/src/: lib.rs  main.rs
drop_the_blog/src/: lib.rs
error_types/: Cargo.toml
events/: Cargo.toml
expected_variable/: Cargo.toml
handling/: Cargo.toml
lifetimes/: Cargo.toml
macro_calculator/: Cargo.toml
matrix_display/: Cargo.toml
matrix_mult/: Cargo.toml
matrix_ops/: Cargo.toml
middle_day/: Cargo.toml
order-books/: Cargo.toml
parts_sums/: Cargo.toml
prev_prime/: Cargo.toml
shopping_mall/: Cargo.toml
src/: main.rs
vehicles/: Cargo.toml
(+108 files in other folders)
