workspace = { members = ["borrow","looping" ,"borrow_me_the_reference", "copy", "changes", "count_factorial", "counting_words", "doubtful", "insertion_sort", "inv_pyramid", "lucas_number", "modify_letter",  "name_initials", "ownership", "parts_sums", "prev_prime", "smallest", "string_literals", "tic_tac_toe", "to_url", "circle"] }
[package]
name = "piscine-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
scalar = {path="scalar"}
temperature_conv = {path="temperature_conv"}
find_factorial = {path="find_factorial"}
matrix_transposition = {path= "matrix_transposition"}
borrow = {path ="borrow"}
