workspace = { members = ["generics", "generics_list", "lalgebra_scalar", "matrix"] }
[package]
name = "piscine-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
scalar = {path="scalar"}
temperature_conv = {path="temperature_conv"}
find_factorial = {path="find_factorial"}
matrix_transposition = {path= "matrix_transposition"}
borrow = {path ="borrow"}
